tests/ui/misapply.stderr
error: expected `fn`
 --> tests/ui/misapply.rs:4:1
  |
4 | struct Test {
  | ^^^^^^
