tests/ui/misapply.rs
use anyinput::anyinput;

#[anyinput]
struct Test {
    a: AnyString,
    b: AnyString,
}

fn main() {}
